完善服务接口
1.修正IP中注释错误
2.增加天气查询接口

--- a/page/OBS/index.wxml
+++ b/page/OBS/index.wxml
@@ -54,6 +54,11 @@
                         <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
                         <view class="widget__line"></view>
                     </navigator>
+                    <navigator url="services/weather/weather" class="widget">
+                        <text class="widget__name">天气查询</text>
+                        <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
+                        <view class="widget__line"></view>
+                    </navigator>
                 </view>
             </view>
         </view>
