--- a/page/OBS/index.wxml
+++ b/page/OBS/index.wxml
@@ -59,6 +59,11 @@
                         <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
                         <view class="widget__line"></view>
                     </navigator>
+                    <navigator url="services/city/city" class="widget">
+                        <text class="widget__name">城市信息查询</text>
+                        <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
+                        <view class="widget__line"></view>
+                    </navigator>
                 </view>
             </view>
         </view>
