完善服务接口
入口增加图灵机器人

--- a/page/OBS/index.wxml
+++ b/page/OBS/index.wxml
@@ -64,6 +64,16 @@
                         <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
                         <view class="widget__line"></view>
                     </navigator>
+                    <navigator url="services/oil/oil" class="widget">
+                        <text class="widget__name">今日油价查询</text>
+                        <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
+                        <view class="widget__line"></view>
+                    </navigator>
+                    <navigator url="services/turing/turing" class="widget">
+                        <text class="widget__name">图灵机器人</text>
+                        <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
+                        <view class="widget__line"></view>
+                    </navigator>
                 </view>
             </view>
         </view>
