--- a/page/OBS/index.wxml
+++ b/page/OBS/index.wxml
@@ -69,6 +69,11 @@
                         <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
                         <view class="widget__line"></view>
                     </navigator>
+                    <navigator url="services/holiday/holiday" class="widget">
+                        <text class="widget__name">节假日查询</text>
+                        <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
+                        <view class="widget__line"></view>
+                    </navigator>
                     <navigator url="services/turing/turing" class="widget">
                         <text class="widget__name">图灵机器人</text>
                         <image class="widget__arrow" src="resources/arrow.png" background-size="cover" />
